[gd_scene load_steps=3 format=3 uid="uid://5oeuqaqr7qho"]

[ext_resource type="Script" path="res://hud.gd" id="1_q0h5v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bkf8l"]
bg_color = Color(1, 1, 1, 1)

[node name="hud" type="CanvasLayer"]
script = ExtResource("1_q0h5v")

[node name="Score" type="Label" parent="."]
light_mask = 0
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
text = "0
"

[node name="StartButton" type="Button" parent="."]
top_level = true
light_mask = 0
visibility_layer = 2
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -240.0
offset_right = 100.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 0
text = "Start"

[node name="Message" type="Label" parent="."]
top_level = true
light_mask = 0
visibility_layer = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="Light" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = 150.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_bkf8l")
max_value = 13.0
allow_greater = true
show_percentage = false

[node name="LightCooldown" type="ProgressBar" parent="."]
offset_left = 25.0
offset_top = 25.0
offset_right = 50.0
offset_bottom = 50.0
rotation = -1.5708
max_value = 1.0
show_percentage = false

[node name="Frames" type="Label" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0
text = "0"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
